--- a/My First Project/index.html
+++ b/My First Project/index.html
@@ -16,7 +16,10 @@
     </p>
    <div class="one-way">
     <p>One way to connect with God is to spend time with Him. Many people find that being with Him through reading their bible, praying and attending church services helps them feel closer to God and appreciate the beauty and wonder of the world around them. </p>
-   <div>
+   </div>
+   <div class="two-way">
+    <p>One way to connect with God is to spend time with Him. Many people find that being with Him through reading their bible, praying and attending church services helps them feel closer to God and appreciate the beauty and wonder of the world around them. </p>
+   </div>
 
   </body>
   </body>
